# ContextLayer

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  ContextLayerPRD.md  LICENSE  NOTICE  README.md  package.json
.contextlayer/: rules.yml
.cursor/: mcp.json.example
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: config.yml  design-partner-feedback.yml
.github/workflows/: ci.yml  trace-ci.yml
.taskmaster/: state.json
.taskmaster/docs/: ContextLayerPRD-addendum-blocks.md  ContextLayerPRD.md
.taskmaster/tasks/: tasks.json
Modernize ContextLayer UX/: README.md  index.html
Modernize ContextLayer UX/src/app/: App.tsx
Modernize ContextLayer UX/src/styles/: fonts.css  theme.css
apps/desktop/: index.html  package-lock.json  package.json
apps/desktop/src/: App.css  App.tsx  api.ts  index.css  shellContext.ts  types.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: capture_watcher.rs  lib.rs  main.rs
apps/desktop/src/components/: AppShell.tsx  BlockPanel.tsx  CapturePickerDialog.tsx  CheckpointDialog.tsx  ConfirmDialog.tsx  HygienePanel.tsx  NodePanel.tsx  PromptDialog.tsx  SessionGraphDetailPanel.tsx  SessionGraphView.tsx  Toast.tsx
apps/desktop/src/hooks/: useAutoDismiss.ts
apps/desktop/src/pages/: HelpPage.tsx  TimelinePage.tsx  WorkspaceListPage.tsx
apps/desktop/src/styles/: fonts.css  theme.css
apps/mcp-server/: Cargo.toml
apps/mcp-server/src/: main.rs
apps/recorder/: Cargo.toml
apps/recorder/src/: main.rs
apps/trace-cli/: Cargo.toml
apps/trace-cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: admission.rs  lib.rs  types.rs
crates/db/: Cargo.toml
crates/db/src/: blocks.rs  error.rs  graph.rs  hygiene.rs  lib.rs  migrate.rs
crates/db/tests/: integration.rs
crates/export/: Cargo.toml
crates/export/src/: import.rs  lib.rs
crates/trace/: Cargo.toml
crates/trace/src/: branches.rs  capture.rs  capture_scope.rs  check.rs  claude_code.rs  context_read.rs  cursor.rs  lib.rs  pr_appendix.rs  recording.rs  redact.rs  session_graph.rs  store.rs  transcripts.rs
docs/: BETA-LAUNCH-CHECKLIST.md  COMMANDS-CHEATSHEET.md  FUTURE-IMPLEMENTATION.md  GITHUB-SETTINGS.md  MCP-SETUP.md  MCP-TOOLS.md  POSITIONING.md  PRD-addendum-blocks.md  README.md  TROUBLESHOOTING.md  mcp-cursor-cheatsheet.md
docs/cheatsheets/: COMMANDS-CHEATSHEET.md  MCP-SETUP.md  MCP-TOOLS.md  mcp-cursor-cheatsheet.md
docs/engineering/: SESSION-GRAPH-MERGE-ARCS-SCAFFOLD.md
docs/gtm/: DESIGN-PARTNER-OUTREACH.md  DISTRIBUTION-STEALS-CHECKLIST.md  EVAL-PAPER.md  INVESTOR-90-DAY-DELTA.md  Launch-Video-Brief.md  README.md
docs/implementation/: BETA-LAUNCH-CHECKLIST.md  INSTALLER-BUNDLE-PLAN.md  MVP-SPRINT.md  PRE-MAIN-CHECKLIST.md
docs/product/: B1-PR-EXPORT-SPEC.md  COMPARISON-vs-chat-log-tools.md  FUTURE-IMPLEMENTATION.md  PITCH.md  POSITIONING.md  PRD-addendum-merged-vision.md
docs/reasoning/: example-pr-export.md
examples/: demo-pr-reasoning.md
fixtures/: dogfood-checklist.md
migrations/: 001_initial.sql  002_timeline_indexes.sql  003_blocks.sql  004_block_title.sql  005_workspace_archived.sql
scripts/: prepare-sidecars.ps1
templates/dark-editorial-landing/: DESIGN-SPEC.md  EXTENSIONS.md  README.md  contextlayer.html  template.html
