[package]
name = "contextlayer-mcp"
description = "Minimal stdio MCP server — read/write lane to ContextLayer graph.db"
version.workspace = true
edition.workspace = true

[[bin]]
name = "contextlayer-mcp"
path = "src/main.rs"

[dependencies]
contextlayer-core.workspace = true
contextlayer-db.workspace = true
contextlayer-export.workspace = true
contextlayer-trace.workspace = true
rmcp = { version = "1.7", features = ["server", "transport-io", "macros"] }
schemars = "1"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
anyhow = "1"
