[package]
name = "contextlayer-recorder"
description = "Automatic Cursor transcript recorder for ContextLayer capture lane"
version.workspace = true
edition.workspace = true

[[bin]]
name = "contextlayer-recorder"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
contextlayer-db = { path = "../../crates/db" }
contextlayer-trace = { path = "../../crates/trace" }
serde_json.workspace = true
