[package]
name = "contextlayer-trace-cli"
description = "ContextLayer trace CI checker"
version.workspace = true
edition.workspace = true

[[bin]]
name = "contextlayer-trace"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
contextlayer-trace = { path = "../../crates/trace" }
serde_json.workspace = true
