[package]
name = "contextlayer-trace"
description = "Local session trace store + trace CI rules (capture v0)"
version.workspace = true
edition.workspace = true

[dependencies]
chrono = { workspace = true }
dirs = "6"
regex = "1"
rusqlite.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_yaml = "0.9"
thiserror.workspace = true
uuid = { workspace = true }

[dev-dependencies]
tempfile = "3"
