[package]
name = "contextlayer-desktop"
version.workspace = true
description = "ContextLayer — bounded epistemic tracking desktop shell"
authors = ["ContextLayer"]
edition.workspace = true

[lib]
name = "contextlayer_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
contextlayer-core.workspace = true
contextlayer-db.workspace = true
contextlayer-export.workspace = true
contextlayer-trace.workspace = true
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-clipboard-manager = "2"
serde.workspace = true
serde_json.workspace = true
